--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,4 +2,7 @@
     padding: 28px 48px 0 48px;
     display: flex;
     justify-content: space-between;
+    max-width: 1280px;
+    width: 100%;
+    box-sizing: border-box;
 }
