--- a/blocks/intro/__intro.css
+++ b/blocks/intro/__intro.css
@@ -1,6 +1,5 @@
 .intro {
-    min-width: 984px;
+    max-width: 690px;
     color: #FFFFFF;
-    padding-top: 92px;
-    display: flex;
+    padding: 92px 442px 0 148px;
 }
