--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,7 +1,6 @@
-.lead__image {
-    object-fit: contain;
+.photo-grid__item {
+    object-fit: cover;
     width: 100%;
-    height: 100%;
     max-height: 100%;
     max-width: 100%;
 }
