--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,22 +1,3 @@
 .cover {
-    position: relative;
-    min-height: 740px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.cover::after {
-    content: "";
-    position: absolute;
-    background-image: url("../../images/cover-trains.jpg");
-    background-size: cover;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: -1;
-    opacity: .7;
+    padding: 0 48px 0 48px;
 }
