--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,12 @@
     padding: 28px 48px 0 48px;
     display: flex;
     justify-content: space-between;
-    max-width: 1280px;
     width: 100%;
     box-sizing: border-box;
+}
+
+@media screen and (min-width: 1280px){
+    .header {
+        max-width: 1280px;
+    }
 }
