--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -13,3 +13,9 @@
 .place:last-of-type {
     padding: 0;
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .place {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
