--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,3 +1,9 @@
 .content {
-    max-width: 1280px;
+    width: 100%;
+}
+
+@media screen and (min-width: 1280px) {
+    .content {
+        max-width: 1280px;
+    }
 }
