--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,3 +1,9 @@
 .cover {
     padding: 0 48px 0 48px;
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .cover {
+        padding: 0;
+    }
+}
