--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,13 @@
 .footer {
     padding: 92px 48px 24px 48px;
-    max-width: 1280px;
     width: 100%;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
+}
+
+@media screen and (min-width: 1280px) {
+    .footer {
+        max-width: 1280px;
+    }
 }
