--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,7 +1,4 @@
 .lead__image {
-    object-fit: contain;
+    object-fit: cover;
     width: 100%;
-    height: 100%;
-    max-height: 100%;
-    max-width: 100%;
 }
