--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,3 +7,9 @@
     margin: 0;
     padding: 32px 0 64px 0;
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .lead__subtitle {
+        padding-bottom: 56px;
+    }
+}
