--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,3 +7,11 @@
     gap: 16px;
     padding: 92px 48px 0 48px;
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .photo-grid {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        gap: 14px;
+    }
+}
