--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,12 @@
 .places {
-    padding: 127px 148px 57px 148px;
+    padding: 127px 0 57px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .places {
+        padding: 92px 0 92px 0;
+    }
 }
