--- a/blocks/places/places__list/places__list.css
+++ b/blocks/places/places__list/places__list.css
@@ -5,3 +5,9 @@
     padding: 0;
     max-width: 960px;
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .places__list {
+        max-width: 928px;
+    }
+}
