--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,4 @@
+@import url(../vendor/normalize.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -6,6 +7,7 @@
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__hidden-radio-circle/header__hidden-radio-circle.css);
 @import url(../blocks/content/content.css);
+@import url(../blocks/lead-and-intro-container/lead-and-intro-container.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
