--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,3 +7,9 @@
         padding: 0;
     }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .cover {
+        padding: 0;
+    }
+}
