--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,3 +11,9 @@
         max-width: 1280px;
     }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .footer {
+        padding: 88px 24px 24px 24px;
+    }
+}
