--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -11,3 +11,9 @@
         max-width: 1280px;
     }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .header {
+        padding: 28px 24px 0 24px;
+    }
+}
