--- a/blocks/intro/__intro.css
+++ b/blocks/intro/__intro.css
@@ -3,3 +3,9 @@
     color: #FFFFFF;
     padding-top: 92px;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .intro {
+        padding: 88px 24px 0 24px;
+    }
+}
