--- a/blocks/lead-and-intro-container/lead-and-intro-container.css
+++ b/blocks/lead-and-intro-container/lead-and-intro-container.css
@@ -7,3 +7,9 @@
         padding: 48px 48px 0 48px;
     }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .lead-and-intro-container {
+        padding: 48px 0 0 0;
+    }
+}
