--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,3 +6,9 @@
     letter-spacing: 1.5px;
     color: #FFFFFF;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .lead__caption {
+        padding-left: 24px;
+    }
+}
