--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -10,3 +10,9 @@
         padding: 92px 0 92px 0;
     }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .places {
+        padding: 88px 0 90px 0;
+    }
+}
