--- a/blocks/places/places__list/places__list.css
+++ b/blocks/places/places__list/places__list.css
@@ -2,12 +2,17 @@
     list-style-type: none;
     color: #FFFFFF;
     margin: 0;
-    padding: 0;
-    max-width: 960px;
+    padding: 0 148px 0 148px;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .places__list {
-        max-width: 928px;
+        padding: 0 48px 0 48px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .places__list {
+        padding: 0 24px 0 24px;
     }
 }
