--- a/blocks/header/__form/header__form.css
+++ b/blocks/header/__form/header__form.css
@@ -3,3 +3,11 @@
     line-height: 28px;
     align-self: flex-end;
 }
+
+@media screen and (max-width: 767px) {
+    .header__form {
+        font-size: 18px;
+        line-height: 20px;
+        padding-bottom: 5px;
+    }
+}
