--- a/blocks/intro/__intro.css
+++ b/blocks/intro/__intro.css
@@ -9,3 +9,9 @@
         padding: 88px 24px 0 24px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .intro {
+        padding: 64px 16px 0 16px;
+    }
+}
