--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,3 +1,9 @@
 .place__paragraphs {
     grid-area: paragraphs;
 }
+
+@media screen and (max-width: 767px) {
+    .place__paragraphs {
+        padding: 0 16px 0 16px;
+    }
+}
