--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -16,3 +16,9 @@
         padding: 88px 0 90px 0;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .places {
+        padding: 64px 0 66px 0;
+    }
+}
