--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,22 +1,17 @@
 @font-face {
     font-family: 'Inter';
     font-style: normal;
+    font-weight: 400;
     src: url("../../fonts/Inter-Regular.woff2") format("woff2"),
         url("../../fonts/Inter-Regular.woff") format("woff");
 }
 
 @font-face {
     font-family: 'Inter';
-    font-style: italic;
-    src: url("../../fonts/Inter-Italic.woff2") format("woff2"),
-        url("../../fonts/Inter-Italic.woff") format("woff");
-}
-
-@font-face {
-    font-family: 'Inter';
-    font-weight: bold;
-    src: url("../../fonts/Inter-Bold.woff2") format("woff2"),
-        url("../../fonts/Inter-Bold.woff") format("woff");
+    font-style: normal;
+    font-weight: 900;
+    src: url("../../fonts/Inter-Black.woff2") format("woff2"),
+        url("../../fonts/Inter-Black.woff") format("woff");
 }
 
 .root {
