--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,12 +1,18 @@
 .footer__link {
-    margin: 0;
     font-size: 16px;
     line-height: 18px;
     color: #FFFFFF;
     text-decoration: none;
-    padding-right: 18px;
+    margin: 0;
 }
 
 .footer__link:hover {
     opacity: .8;
+}
+
+@media screen and (max-width: 767px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 24px;
+    }
 }
