--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -17,3 +17,10 @@
         padding: 88px 24px 24px 24px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .footer {
+        padding: 64px 0 24px 16px;
+        flex-direction: column;
+    }
+}
