--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -17,3 +17,9 @@
         padding: 28px 24px 0 24px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .header {
+        padding: 16px 16px 0 16px;
+    }
+}
