--- a/blocks/intro/__subtitle/intro__subtitle.css
+++ b/blocks/intro/__subtitle/intro__subtitle.css
@@ -4,3 +4,9 @@
     font-size: 16px;
     line-height: 26.08px;
 }
+
+@media screen and (max-width: 767px) {
+    .intro__subtitle {
+        padding-bottom: 34px;
+    }
+}
