--- a/blocks/lead-and-intro-container/lead-and-intro-container.css
+++ b/blocks/lead-and-intro-container/lead-and-intro-container.css
@@ -13,3 +13,9 @@
         padding: 48px 0 0 0;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .lead-and-intro-container {
+        padding: 48px 0 0 0;
+    }
+}
