--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,6 @@
 .lead__subtitle {
     color: #FFFFFF;
-    width: 640px;
+    max-width: 640px;
     font-size: 30px;
     line-height: 36px;
     text-align: center;
@@ -11,5 +11,13 @@
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .lead__subtitle {
         padding-bottom: 56px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .lead__subtitle {
+        font-size: 16px;
+        line-height: 20px;
+        padding: 16px 0 40px 0;
     }
 }
