--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,15 @@
 .lead__title {
-    width: 720px;
+    max-width: 720px;
     font-size: 96px;
     line-height: 100px;
     color: #FFFFFF;
     text-align: center;
     margin: 0;
+}
+
+@media screen and (max-width: 767px) {
+    .lead__title {
+        font-size: 40px;
+        line-height: 44px;
+    }
 }
