--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -23,3 +23,12 @@
         grid-template-rows: repeat(6, 1fr);
     }
 }
+
+@media screen and (max-width: 767px) {
+    .photo-grid {
+        padding: 64px 16px 0 16px;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(12, 1fr);
+        gap: 12px;
+    }
+}
