--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -15,5 +15,14 @@
     .place__paragraph {
         font-size: 16px;
         line-height: 26px;
+        padding-bottom: 25px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 26px;
+        padding-bottom: 25px;
     }
 }
