--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,11 +3,20 @@
     font-size: 72px;
     line-height: 76px;
     grid-area: title;
+    font-weight: 900;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .place__title {
         font-size: 42px;
         line-height: 46px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place__title {
+        font-size: 32px;
+        line-height: 35px;
+        padding: 0 16px 0 16px;
     }
 }
