--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,3 +2,9 @@
     grid-area: website;
     align-self: end;
 }
+
+@media screen and (max-width: 767px) {
+    .place__website {
+        padding: 0 16px 0 16px;
+    }
+}
