--- a/blocks/places/places__list/places__list.css
+++ b/blocks/places/places__list/places__list.css
@@ -16,3 +16,9 @@
         padding: 0 24px 0 24px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .places__list {
+        padding: 0;
+    }
+}
