fixed after review

--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,6 +1,8 @@
 .header__lang-links {
-    display: inline-flex;
+    display: flex;
+    list-style-type: none;
     border: none;
     margin: 0;
     padding: 0;
+    align-self: flex-end;
 }
