--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,6 +5,7 @@
     line-height: 14px;
     letter-spacing: 1.5px;
     color: #FFFFFF;
+    text-transform: uppercase;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
