--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,8 +1,15 @@
 .header__lang-link {
     color: #FFFFFF;
-    margin-right: 18px;
+    padding-left: 18px;
+    font-size: 24px;
+    line-height: 28px;
+    text-decoration: none;
 }
 
-.header__lang-link:last-of-type {
-    margin: 0;
+@media screen and (max-width: 767px) {
+    .header__lang-link {
+        font-size: 18px;
+        line-height: 20px;
+        padding-bottom: 5px;
+    }
 }
